force-app/main/default/objects/TempKnoxApprover__c/TempKnoxApprover__c.object-meta.xml
<CustomObject>
    <label>Temp Knox Approver</label>
    <nameField>
        <label>Knox Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Knox Approver</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>