force-app/main/default/objects/TempKnoxApprover__c/fields/ApproverType__c.field-meta.xml
<CustomField>
    <fullName>ApproverType__c</fullName>
    <label>ApproverType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>기안</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>결재</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>합의</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>후결</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>병렬합의</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>병렬결재</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>통보</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>