force-app/main/default/objects/TempKnoxApprover__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Temp Knox Approver</relationshipLabel>
    <relationshipName>Temp_Knox_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>