force-app/main/default/objects/TempKnoxApprover__c/fields/EnName__c.field-meta.xml
<CustomField>
    <fullName>EnName__c</fullName>
    <label>Name (En)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>