force-app/main/default/objects/TempKnoxApprover__c/fields/EvEName__c.field-meta.xml
<CustomField>
    <fullName>EvEName__c</fullName>
    <label>Name (En)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>