force-app/main/default/objects/TempKnoxApprover__c/fields/EvSdeptENM__c.field-meta.xml
<CustomField>
    <fullName>EvSdeptENM__c</fullName>
    <label>Department (En)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>