force-app/main/default/objects/TempKnoxApprover__c/fields/EvSdeptNM__c.field-meta.xml
<CustomField>
    <fullName>EvSdeptNM__c</fullName>
    <label>Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>