force-app/main/default/objects/TempKnoxApprover__c/fields/EvUniqID__c.field-meta.xml
<CustomField>
    <fullName>EvUniqID__c</fullName>
    <label>EV_UNIQ_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>