force-app/main/default/objects/TempKnoxApprover__c/fields/IsArbitraryDecision__c.field-meta.xml
<CustomField>
    <fullName>IsArbitraryDecision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsArbitraryDecision</label>
    <type>Checkbox</type>
</CustomField>