force-app/main/default/objects/TempKnoxApprover__c/fields/IsChangeLine__c.field-meta.xml
<CustomField>
    <fullName>IsChangeLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChangeLine</label>
    <type>Checkbox</type>
</CustomField>