force-app/main/default/objects/TempKnoxApprover__c/fields/IsEditText__c.field-meta.xml
<CustomField>
    <fullName>IsEditText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEditText</label>
    <type>Checkbox</type>
</CustomField>