force-app/main/default/objects/TempKnoxApprover__c/fields/IsGetApprovalLine__c.field-meta.xml
<CustomField>
    <fullName>IsGetApprovalLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IF 수신된 결재선 정보</description>
    <label>Is Get Approval Line</label>
    <type>Checkbox</type>
</CustomField>