force-app/main/default/objects/TempKnoxApprover__c/fields/TempKnoxApproval__c.field-meta.xml
<CustomField>
    <fullName>TempKnoxApproval__c</fullName>
    <label>Temp Knox Approval</label>
    <referenceTo>TempKnoxApproval__c</referenceTo>
    <relationshipLabel>Temp Knox Approver</relationshipLabel>
    <relationshipName>Temp_Knox_Approver</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>